--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
     "dev": "nodemon index.js",
     "start": "node index.js"
   },
+  "scripts": {
+    "dev": "react-scripts start",
+    "start": "serve -s build",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
+    } ,
   "author": "",
   "license": "ISC",
   "dependencies": {
